feat: add cfn-lint configuration and update GitHub workflows for vulnerability scanning
- Introduced a new .cfnlintrc.yaml file for CloudFormation template linting.
- Updated AWS SDK dependencies to version 3.971.0 across multiple modules.
- Enhanced GitHub workflows to include Trivy vulnerability scanning and SARIF report uploads.
- Added permissions for security events in workflows to support vulnerability reporting.
- Improved Docker build process with SBOM and provenance attestations for better security.

--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -7,6 +7,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  security-events: write  # Required for Trivy SARIF upload to GitHub Security tab
+
 jobs:
   runner:
     runs-on: ubuntu-latest
